<resources>
    <string name="app_name">TestMacroPay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--fragment login-->
    <string name="txt_correo">Correo</string>
    <string name="txt_password">Constraseña</string>
    <string name="txt_login">Login</string>

    <!--Fragment home-->
    <string name="txt_titular">Titular:</string>
    <string name="txt_url">Url:</string>
    <string name="txt_email">Email:</string>
    <string name="txt_solicitud">Solicitud:</string>
</resources>