<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.home.HomeFragment">

        <LinearLayout
            android:id="@+id/linearOne"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_user"
                android:layout_marginTop="20dp" />

            <!--Titular-->
            <TextView
                android:id="@+id/txtTitular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:textSize="16sp"
                android:text="@string/txt_titular" />

            <TextView
                android:id="@+id/txtTitularValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                tools:text="Víctor Martínez" />

            <!--URL-->
            <TextView
                android:id="@+id/txtURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="16sp"
                android:text="@string/txt_url" />

            <TextView
                android:id="@+id/txtURLValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                tools:text="Víctor Martínez" />

            <!--email-->
            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="16sp"
                android:text="@string/txt_email" />

            <TextView
                android:id="@+id/txtEmailValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                tools:text="Víctor Martínez" />

            <!--Solicitud-->
            <TextView
                android:id="@+id/txtSolicitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="16sp"
                android:text="@string/txt_solicitud" />

            <TextView
                android:id="@+id/txtSolicitudValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                tools:text="Víctor Martínez" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>